--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "dependencies": {
-        "camelcase": "^6.2.0"
+        "camelcase": "^6.2.0",
+        "express": "^4.17.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.7"
