--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "nodemon": "^2.0.7"
     },
     "scripts": {
-        "start": "node index.js",
-        "test": "nodemon index.js"
+        "start": "node server.js",
+        "test": "nodemon server.js"
     },
     "repository": {
         "type": "git",
