--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "dependencies": {
         "camelcase": "^6.2.0",
+        "ejs": "^3.1.6",
         "express": "^4.17.1"
     },
     "devDependencies": {
