--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
         "dotenv": "^8.2.0",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
+        "js-beautify": "^1.13.5",
         "mongodb": "^3.6.4",
         "slug": "^4.0.2"
     },
     "devDependencies": {
+        "eslint": "^7.21.0",
         "nodemon": "^2.0.7"
     },
     "scripts": {
