--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "js-beautify": "^1.13.5",
-        "mongodb": "^3.6.4",
-        "slug": "^4.0.2"
+        "mongodb": "^3.6.4"
     },
     "devDependencies": {
         "eslint": "^7.21.0",
         "nodemon": "^2.0.7"
     },
     "scripts": {
-        "start": "node server.js",
-        "test": "nodemon server.js"
+        "start": "nodemon server.js"
     },
     "repository": {
         "type": "git",
