--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "matching-app",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
     "dependencies": {
         "body-parser": "^1.19.0",
         "dotenv": "^8.2.0",
@@ -16,7 +16,8 @@
         "nodemon": "^2.0.7"
     },
     "scripts": {
-        "start": "node server.js"
+        "start": "node server.js",
+        "test": "nodemon server.js"
     },
     "repository": {
         "type": "git",
